--- a/style.css
+++ b/style.css
@@ -17,7 +17,9 @@ h2{
 }
 .half-width{
     width: 50%;
-    padding: 2%;
+    margin-left: 5%;
+    padding-left: 2%;
+    float: left;
 }
 .half-width img{
     width: 80%;
@@ -49,7 +51,7 @@ h2{
 }
 .experience-item{
     width: 40%;
-    box-shadow: 10px 10px 40px gray;
+    box-shadow: 5px 7px 40px gray;
     margin-left: 5%;
     margin-right: 5%;
     padding-left: 20px;
@@ -66,4 +68,11 @@ h2{
 }
 footer p {
     text-align: center;
+}
+p{
+    color: dimgray;
+}
+section{
+    height: 500px;
+    padding-bottom: 150px;
 }
